fixed wandbuilder